crates/frontend/samples/test2.out
error: maximum obligation depth reached
   ┌─ crates/frontend/samples/test2.fir:14:16
   │
14 │     type Bar = B;
   │                ^
